--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>impress.md</title>
+    <title>Impress Book | 惊艳你的听众</title>
   </head>
   <body>
     <div id="app"></div>
